--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "socket.io-client": "^4.4.0",
+    "tachyons": "^4.12.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
