--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "mongoose": "^6.1.3",
+    "socket.io": "^4.4.0"
   }
 }
