--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "art",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon App.js"
   },
   "repository": {
     "type": "git",
