--- a/api/package.json
+++ b/api/package.json
@@ -2,9 +2,9 @@
   "name": "art",
   "version": "1.0.0",
   "description": "",
-  "main": "App.js",
+  "main": "Server.js",
   "scripts": {
-    "start": "nodemon App.js"
+    "start": "nodemon Server.js"
   },
   "repository": {
     "type": "git",
@@ -20,8 +20,11 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "body-parser": "^1.19.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "js-sha256": "^0.9.0",
     "mongoose": "^6.1.3",
     "socket.io": "^4.4.0"
   }
