--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "jwt-then": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "socket.io-client": "^4.4.0",
