--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "art",
   "version": "1.0.0",
   "description": "",
-  "main": "Server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon Server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "js-sha256": "^0.9.0",
+    "jwt-then": "^1.0.1",
     "mongoose": "^6.1.3",
     "socket.io": "^4.4.0"
   }
