--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@emotion/core": "^10.3.1",
+    "@emotion/styled": "^10.3.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "emotion-theming": "^10.3.0",
     "jwt-then": "^1.0.1",
-    "mdb-ui-kit": "^4.1.0",
+    "mdb-react-ui-kit": "^3.0.0",
+    "mdbreact": "^5.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.1",
+    "react-chat-elements": "^11.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.1",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.4.0",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.2"
